--- a/app-chart/Chart.yaml
+++ b/app-chart/Chart.yaml
@@ -3,3 +3,8 @@ name: myapp-chart
 type: application
 version: 0.4.0
 appVersion: 0.0.1
+
+dependencies:
+  - name: mariadb
+    version: 7.3.21
+    repository: "https://charts.bitnami.com/bitnami"
