--- a/app-chart/Chart.yaml
+++ b/app-chart/Chart.yaml
@@ -1,10 +1,10 @@
-apiVersion: v2
-name: myapp-chart
+apiVersion: v1
+name: app-chart
 type: application
 version: 0.4.0
 appVersion: 0.0.1
 
 dependencies:
-  - name: mariadb
-    version: 7.3.21
+  - name: mysql
+    version: 6.11.5
     repository: "https://charts.bitnami.com/bitnami"
