--- a/app-chart/values.yaml
+++ b/app-chart/values.yaml
@@ -1,10 +1,16 @@
+app:
+  version: v2.0.2
 
 
-
-mariadb:
+mysql:
+  master:
+    persistence:
+      size: 1Gi
   image:
-    tag: 10.1.33
+    tag: 5.7.27
   db:
     name: "myapp"
     user: "admin"
-    password: "110788"
+    password: "112233"
+  replication:
+    enabled: false
