--- a/app-chart/templates/ingress.yaml
+++ b/app-chart/templates/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: task4-ingress
+  name: {{ include "app-chart.fullname" . }}
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
@@ -11,5 +11,5 @@ spec:
         paths:
           - path: /otusapp($|/)(.*)
             backend:
-              serviceName: task4-service
+              serviceName: {{ include "app-chart.fullname" . }}
               servicePort: 9000
