--- a/app-chart/templates/service.yaml
+++ b/app-chart/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: task4-service
+  name: {{ include "app-chart.fullname" . }}
 spec:
   selector:
     app: task4-label-dep
