--- a/app-chart/templates/deployment.yaml
+++ b/app-chart/templates/deployment.yaml
@@ -2,21 +2,23 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "app-chart.fullname" . }}
+  labels:
+    app: {{ include "app-chart.labels" . }}
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: {{ include "app-chart.fullname" . }}-label
+      app: {{ include "app-chart.labels" . }}
   template:
     metadata:
       labels:
-        app: {{ include "app-chart.fullname" . }}-label
+        app: {{ include "app-chart.labels" . }}
     spec:
       containers:
         - name: {{ include "app-chart.fullname" . }}
           image: gorasu/task4:{{ .Values.app.version }}
           ports:
-            - name: web
+            - name: http
               containerPort: 8000
           envFrom:
             - configMapRef:
