--- a/app-chart/templates/service.yaml
+++ b/app-chart/templates/service.yaml
@@ -2,11 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "app-chart.fullname" . }}
+  labels:
+    proms: app-prom
 spec:
   selector:
     app: {{ include "app-chart.fullname" . }}-label
   ports:
     - protocol: TCP
       port: 9000
-      targetPort: web
+      targetPort: http
+      name: web
   type: NodePort
