--- a/app-chart/values.yaml
+++ b/app-chart/values.yaml
@@ -8,7 +8,7 @@ metrics:
 mysql:
   master:
     persistence:
-      size: 1Gi
+      size: 8Gi
   image:
     tag: 5.7.27
   db:
@@ -17,3 +17,9 @@ mysql:
     password: "112233"
   replication:
     enabled: false
+  metrics:
+    enabled: true
+    serviceMonitor:
+        enabled: true
+        interval: 10s
+        namespace: "default"
